# forexnews-bot

./: .env  .env.template  .gitignore  Cargo.toml  Makefile  README.md  bot.go  forex_news_bot.py  go.mod  go.sum  hello.go  main.go  requirements.txt
.github/workflows/: build.yml
News-parser/: Cargo.toml
News-parser/src/: main.rs
db/: Cargo.toml
db/src/: main.rs
src/: main.rs
telegram-bot/: Cargo.toml
telegram-bot/src/: main.rs
