[package]
name = "News-parser"
version.workspace = true
edition.workspace = true



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
minreq = { version = "^2.8.1", features = ["https-rustls"] }
