[package]
name = "telegram-bot" # the name of the package
version.workspace = true
edition.workspace = true


[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
